# PV227-RTSpeedrun

./: CMakeLists.txt  README.md
assets/: SnowmanOBJ.mtl  copy_assets.cmake
cmake/: deps.cmake
shaders/: raytracing.lib.hlsl
src/: app.cpp  app.hpp  camera.hpp  consts.hpp  entry_main.cpp  graphics.cpp  graphics.hpp  model.cpp  model.hpp  model_loader.cpp  model_loader.hpp  scene.cpp  scene.hpp  sdl.cpp  sdl.hpp  stb.h  texture.cpp  texture.hpp
